# picam

./: .gitignore  CLAUDE.md  README.md  build.sh
.github/workflows/: build.yml
buildroot/: Config.in  external.desc
buildroot/board/picam/: S05wifi  S99picam  cmdline.txt  config.txt  genimage.cfg  kernel.config  post-build.sh  post-image.sh
buildroot/configs/: picam_defconfig
buildroot/package/picam-app/: Config.in  picam-app.mk
docker/: Dockerfile
scripts/: setup_gadget.sh
src/: CMakeLists.txt  camera.cpp  camera.h  encoder.cpp  encoder.h  main.cpp  uvc_gadget.cpp  uvc_gadget.h
